--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.3",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "nuxt-icons": "^3.2.1"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
